# crlLwTT

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: CompilerOptions.cmake  Dependencies.cmake  FindLibTorch.cmake  LwTTConfig.cmake.in  PlatformDetection.cmake
docs/: API_REFERENCE.md  BASELINE_PROMPT.md  Doxyfile.in  LIBTORCH_INSTALLATION_GUIDE.md  SUBMODULE_USAGE.md
include/LwTT/: LwTT.hpp  Platform.hpp  Platform_temp.hpp
include/LwTT/core/: AutogradSensitivity.hpp  ChainRuleSensitivity.hpp  ObjectiveFunction.hpp  STATransformer.hpp  SparseAttention.hpp  Tensor.hpp  TimeEncoding.hpp  Transformer.hpp
include/LwTT/layers/: TransformerBlock.hpp
include/LwTT/optimization/: KernelFusion.hpp
include/LwTT/utils/: Memory.hpp  PreallocatedBuffers.hpp  SIMD.hpp  Threading.hpp
scripts/: build.sh  build_with_lwtt.sh  test_submodule_integration.sh
src/core/: Attention.cpp  AutogradSensitivity.cpp  ChainRuleSensitivity.cpp  LayerNorm.cpp  LwTT.cpp  ObjectiveFunction.cpp  STATransformer.cpp  SparseAttention.cpp  Tensor.cpp  TimeEncoding.cpp  Transformer.cpp
src/io/: Config.cpp  DataLoader.cpp  ModelIO.cpp
src/layers/: Embedding.cpp  FeedForward.cpp  MultiHeadAttention.cpp  TransformerBlock.cpp
src/optimization/: KernelFusion.cpp  Pruning.cpp  Quantization.cpp
src/utils/: Logger.cpp  Memory.cpp  PreallocatedBuffers.cpp  SIMD.cpp  Threading.cpp  Timer.cpp
tests/: CMakeLists.txt  platform_test.cpp  test_sta_environment_integration.cpp
tests/benchmarks/: CMakeLists.txt  TransformerBenchmark.cpp
tests/examples/: CMakeLists.txt  model_serialization_demo.cpp  uncertainty_estimation_demo.cpp
tests/examples/advanced_usage/: CMakeLists.txt  README.md  sta_integration_example.cpp
tests/examples/basic_usage/: CMakeLists.txt  simple_transformer.cpp
tests/integration_tests/: CMakeLists.txt
tests/unit_tests/: CMakeLists.txt
tests/unit_tests/core/: TensorTest.cpp  TimeEncodingTest.cpp  TransformerTest.cpp
